--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -1,33 +1,23 @@
 [package]
-name = "app"
+name = "backend"
 version = "0.1.0"
-description = "A Tauri App"
-authors = ["you"]
-license = ""
-repository = ""
-edition = "2021"
-rust-version = "1.77.2"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[lib]
-name = "app_lib"
-crate-type = ["staticlib", "cdylib", "rlib"]
-
-[build-dependencies]
-tauri-build = { version = "2.1.1", features = [] }
+edition = "2024"
 
 [dependencies]
-# tauri
-tauri = { version = "2.4.1", features = [] }
-tauri-plugin-log = "2.0.0-rc"
 # 异步运行时
 tokio = { version = "1", features = ["full"] }
+
+# Web框架
+axum = { version = "0.8", features = ["macros", "multipart", "tracing"] }
+axum-extra = { version = "0.10.0", features = ["typed-header"] }
+tower = "0.5.2"
+tower-http = { version = "0.6.2", features = ["cors", "trace"] }
+
 # 数据库
 sqlx = { version = "0.8", features = [
   "runtime-tokio",
   "tls-rustls",
-  "sqlite",
+  "postgres",
   "any",
   "uuid",
   "time",
@@ -39,9 +29,9 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
 # 日志
-log = "0.4.27"
-# 认证
-bcrypt = "0.17.0"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
+tracing-appender = "0.2"
 
 # 工具库
 dotenv = "0.15"
@@ -51,3 +41,7 @@ time = { version = "0.3", features = ["serde"] }
 once_cell = "1.21.2"
 toml = "0.8.8"
 anyhow = "1"
+
+# 认证
+jsonwebtoken = "9.3.1"
+bcrypt = "0.17.0"
