--- a/student-management-system/package.json
+++ b/student-management-system/package.json
@@ -20,6 +20,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.3",
+    "student-management-system": "file:",
     "tailwind-merge": "^3.1.0",
     "tw-animate-css": "^1.2.5"
   },
