feat: 添加课程、试卷、作业等模型及数据库初始化逻辑
新增课程、试卷、作业、学生等模型，并更新数据库初始化逻辑以支持相关表结构。同时移除用户模型中的管理员角色，简化角色管理。

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -22,7 +22,9 @@ sqlx = { version = "0.8", features = [
   "uuid",
   "time",
   "json",
+  "rust_decimal",
 ] }
+rust_decimal = { version = "1.37", features = ["serde"] }
 
 # 序列化/反序列化
 serde = { version = "1.0", features = ["derive"] }
