feat: 新增学生、课程、试卷和作业的API模块及查询功能
新增学生、课程、试卷和作业的API模块，支持创建、更新、删除和查询操作。添加按日期范围、标题、关键词等条件查询功能，提升数据检索灵活性。

--- a/backend/config.toml
+++ b/backend/config.toml
@@ -5,8 +5,7 @@ port = 8080
 
 # 数据库配置
 [database]
-#url = "postgres://postgres:123456@localhost:5432/Blog"
-url = "postgres://ExquisiteCoreBlog:621716Aawa@pgm-bp107q684900ia6j9o.pg.rds.aliyuncs.com/Blog"
+url = "postgres://postgres:123456@localhost:5432/student"
 max_connections = 5
 
 # JWT配置
