build: 添加 tauri-plugin-http 及相关依赖
为了支持 HTTP 请求功能，添加了 tauri-plugin-http 插件及其相关依赖。这些依赖包括在 Cargo.toml、package.json 和 pnpm-lock.yaml 中的更新，以确保项目能够正确处理 HTTP 请求。

--- a/student-management-system/src-tauri/Cargo.toml
+++ b/student-management-system/src-tauri/Cargo.toml
@@ -24,6 +24,7 @@ log = "0.4"
 tauri = { version = "2", features = [] }
 tauri-plugin-log = "2"
 tauri-plugin-upload = "2"
+tauri-plugin-http = "2"
 #异步
 tokio = { version = "1", features = ["full"] }
 #http
