--- a/student-management-system/package.json
+++ b/student-management-system/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@tauri-apps/plugin-http": "^2.4.3",
+    "@tauri-apps/plugin-log": "^2.3.1",
+    "@tauri-apps/plugin-upload": "^2.2.1",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
