--- a/student-management-system/src-tauri/Cargo.toml
+++ b/student-management-system/src-tauri/Cargo.toml
@@ -25,10 +25,9 @@ tauri = { version = "2", features = [] }
 tauri-plugin-log = "2"
 tauri-plugin-upload = "2"
 tauri-plugin-http = "2"
+tauri-plugin-store = "2"
 #异步
 tokio = { version = "1", features = ["full"] }
-#http
-reqwest = { version = "0.12.15", features = ["json"] }
 
 
 #编译配置
