--- a/student-management-system/package.json
+++ b/student-management-system/package.json
@@ -14,10 +14,12 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tauri-apps/plugin-http": "^2.4.3",
     "@tauri-apps/plugin-log": "^2.3.1",
+    "@tauri-apps/plugin-store": "^2.2.0",
     "@tauri-apps/plugin-upload": "^2.2.1",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
