--- a/student-management-system/package.json
+++ b/student-management-system/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.4",
+    "@radix-ui/react-tabs": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tauri-apps/plugin-http": "^2.4.3",
     "@tauri-apps/plugin-log": "^2.3.1",
